added donate and slider images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
                         </svg>
                     </span></button>
             </a>
-            <a routerLink="/result">
+            <a routerLink="/donate">
                 <button
                     class="py-2 px-4 text-white font-semibold text-sm md:text-lg bg-blue-500 rounded-full flex items-center gap-2">DONATE
                     <span class="mt-1">
@@ -53,13 +53,13 @@
         <div class="swiper mySwiper w-full mt-8">
             <div class="swiper-wrapper">
               <div class="swiper-slide h-[195px] w-[250px] md:h-[225px] md:w-[280px]">
-                <img class="" src="../../assets/images/Rectangle1.png" alt="">
+                <img class="" src="../../assets/images/3.jpeg" alt="">
               </div>
               <div class="swiper-slide h-[195px] w-[250px] md:h-[225px] md:w-[280px]">
-                <img src="../../assets/images/Rectangle 2.png" alt="">
+                <img src="../../assets/images/2.jpeg" alt="">
               </div>
               <div class="swiper-slide h-[195px] w-[250px] md:h-[225px] md:w-[280px]">
-                <img src="../../assets/images/Rectangle3.png" alt="">
+                <img src="../../assets/images/1.jpeg" alt="">
               </div>
             </div>
           </div>
