--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -35,15 +35,15 @@
   <h2 class="md:text-2xl text-xl font-bold">SILVER CLUB</h2>
   <table class="table-fixed w-full text-left">
       <thead class="sticky md:top-[143px] top-[76px]">
-          <tr class="bg-black text-white h-14 md:text-xl text-base font-semibold  ">
-              <th class="text-center">Rank</th>
-              <th class="text-center">Name</th>
+          <tr class="bg-black text-white h-14 text-sm lg:text-xl md:text-base font-semibold  ">
+              <th class="text-center ">Rank</th>
+              <th class="text-center ">Name</th>
               <th class="text-center">Class</th>
               <th class="text-center">Smiles</th>
           </tr>
       </thead>
       <tbody class="overflow-y-auto">
-          <tr *ngFor="let item of sliverMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold md:text-xl">
+          <tr *ngFor="let item of sliverMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold text-sm lg:text-xl md:text-base">
               <td class="text-center">{{i+1}}</td>
               <td class="text-center">{{item[2]}}</td>
               <td class="text-center">{{item[3]}}</td>
@@ -58,7 +58,7 @@
   <h2 class="text-2xl font-bold">GOLD CLUB</h2>
   <table class="table-fixed w-full text-left">
     <thead class="sticky md:top-[143px] top-[76px]">
-        <tr class="bg-black text-white h-14 md:text-xl text-base font-semibold  ">
+        <tr class="bg-black text-white h-14 text-sm lg:text-xl md:text-base font-semibold  ">
             <th class="text-center">Rank</th>
             <th class="text-center">Name</th>
             <th class="text-center">Class</th>
@@ -66,7 +66,7 @@
         </tr>
     </thead>
     <tbody class="overflow-y-auto">
-      <tr *ngFor="let item of goldMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold md:text-xl">
+      <tr *ngFor="let item of goldMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold text-sm lg:text-xl md:text-base">
           <td class="text-center">{{i+1}}</td>
           <td class="text-center">{{item[2]}}</td>
           <td class="text-center">{{item[3]}}</td>
@@ -81,7 +81,7 @@
   <h2 class="text-2xl font-bold">PLATINUM CLUB</h2>
   <table class="table-fixed w-full text-left">
     <thead class="sticky md:top-[143px] top-[76px]">
-        <tr class="bg-black text-white h-14 md:text-xl text-base font-semibold  ">
+        <tr class="bg-black text-white h-14 text-sm lg:text-xl md:text-base font-semibold  ">
             <th class="text-center">Rank</th>
             <th class="text-center">Name</th>
             <th class="text-center">Class</th>
@@ -89,7 +89,7 @@
         </tr>
     </thead>
     <tbody class="overflow-y-auto">
-      <tr *ngFor="let item of platinumMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold md:text-xl">
+      <tr *ngFor="let item of platinumMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold text-sm lg:text-xl md:text-base">
           <td class="text-center">{{i+1}}</td>
           <td class="text-center">{{item[2]}}</td>
           <td class="text-center">{{item[3]}}</td>
@@ -104,7 +104,7 @@
   <h2 class="text-2xl font-bold">DIAMOND CLUB</h2>
   <table class="table-fixed w-full text-left">
     <thead class="sticky md:top-[143px] top-[76px]">
-        <tr class="bg-black text-white h-14 md:text-xl text-base font-semibold  ">
+        <tr class="bg-black text-white h-14 text-sm lg:text-xl md:text-base font-semibold  ">
             <th class="text-center">Rank</th>
             <th class="text-center">Name</th>
             <th class="text-center">Class</th>
@@ -112,7 +112,7 @@
         </tr>
     </thead>
     <tbody class="overflow-y-auto">
-      <tr *ngFor="let item of diamondMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold md:text-xl">
+      <tr *ngFor="let item of diamondMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold text-sm lg:text-xl md:text-base">
           <td class="text-center">{{i+1}}</td>
           <td class="text-center">{{item[2]}}</td>
           <td class="text-center">{{item[3]}}</td>
