--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -114,7 +114,7 @@
     <tbody class="overflow-y-auto">
       <tr *ngFor="let item of diamondMem;let i =index" class="bg-gray-200 text-black h-14 font-semibold text-sm lg:text-xl md:text-base">
           <td class="text-center">{{i+1}}</td>
-          <td class="text-center">{{item[2]}}</td>
+          <td class="text-center truncate">{{item[2]}}</td>
           <td class="text-center">{{item[3]}}</td>
           <td class="text-center">{{item[6]}}</td>
       </tr>
