fixed data calling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <span class="font-bold tracking-widest text-sm md:text-lg">
-            <h1 class="font- text-[#6A6969]">THOUSAND HAPPY FACES</h1>
+            <h1 class="font- text-[#6A6969]">HAPPY FACES</h1>
         </span>
         <div class="flex gap-3 md:gap-8 mt-8">
             <a routerLink="/result-group">
